# manifest-dev

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  gemini-extension.json  pyproject.toml
.claude-plugin/: marketplace.json
.claude/agents/: prompt-reviewer.md
.claude/skills/learn-from-session/: SKILL.md
.claude/skills/prompt-engineering/: SKILL.md
claude-plugins/: README.md
claude-plugins/PLUGIN_TEMPLATE/: README.md
claude-plugins/PLUGIN_TEMPLATE/.claude-plugin/: plugin.json
claude-plugins/manifest-dev/: README.md
claude-plugins/manifest-dev/.claude-plugin/: plugin.json
claude-plugins/manifest-dev/agents/: claude-md-adherence-reviewer.md  code-bugs-reviewer.md  code-coverage-reviewer.md  code-maintainability-reviewer.md  code-simplicity-reviewer.md  code-testability-reviewer.md  criteria-checker.md  docs-reviewer.md  manifest-verifier.md  type-safety-reviewer.md
claude-plugins/manifest-dev/commands/: define.md  do.md
claude-plugins/manifest-dev/hooks/: hook_utils.py  pretool_escalate_hook.py  pyproject.toml  stop_do_hook.py
claude-plugins/manifest-dev/skills/_define/: SKILL.md
claude-plugins/manifest-dev/skills/_define/tasks/: BLOG.md  BUG.md  DOCUMENT.md
claude-plugins/manifest-dev/skills/_do/: SKILL.md
claude-plugins/manifest-dev/skills/define/: SKILL.md  define.md
claude-plugins/manifest-dev/skills/do/: SKILL.md  do.md
claude-plugins/manifest-dev/skills/escalate/: SKILL.md
claude-plugins/manifest-dev/skills/verify/: SKILL.md
docs/: CUSTOMER.md  LLM_CODING_CAPABILITIES.md  LLM_TRAINING.md  PROMPTING.md
tests/hooks/: __init__.py  test_do_stop_hook.py  test_escalate_pretool_hook.py
(+20 files in other folders)
